# gtkexperiment

./: .gitignore  CMakeLists.txt  README.md  main.c  meson.build  resource.xml  tfe.c  tfetextview.c  tfetextview.h  window.ui
